--- a/package.json
+++ b/package.json
@@ -9,12 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.10.3",
-    "@emotion/react": "^11.10.4",
-    "@emotion/server": "^11.10.0",
-    "@emotion/styled": "^11.10.4",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/material": "^5.10.10",
     "eslint-config-prettier": "^8.5.0",
     "next": "^12.3.2",
     "prettier": "^2.7.1",
@@ -27,6 +22,7 @@
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.25.0",
     "eslint-config-next": "12.3.1",
     "eslint-config-standard": "^17.0.0",
@@ -36,6 +32,8 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   }
 }
